# phys_sim_complementary_dynamics

./: .gitignore  README.md  build.sh  submit.sh
asset/mesh/: fish.ele  fish.vert
cpp/: CMakeLists.txt  main.cpp
cpp/basic/: main.cpp
cpp/basic/include/: config.hpp  log.hpp  math.hpp  option.hpp  options.hpp
cpp/basic/src/: log.cpp  math.cpp  option.cpp  options.cpp
cpp/material/: CMakeLists.txt  main.cpp
cpp/material/include/: corotated_material.hpp  linear_material.hpp  material.hpp  neohookean_material.hpp  st_venant_kirchhoff_material.hpp
cpp/material/src/: corotated_material.cpp  linear_material.cpp  material.cpp  neohookean_material.cpp  st_venant_kirchhoff_material.cpp
cpp/rig/: CMakeLists.txt  main.cpp
cpp/rig/include/: linear_blend_skinning_rig.hpp  rig.hpp
cpp/rig/src/: linear_blend_skinning_rig.cpp  rig.cpp
cpp/sim/: CMakeLists.txt  main.cpp
cpp/sim/include/: simulator.hpp
cpp/sim/src/: simulator_basic.cpp  simulator_step.cpp
